update api friends , conservation , message
