# message-be/src/routers/friendsRequestRouter.ts
@@ -1,11 +1,13 @@
 import express from "express";
-import { addFriendRequest, getAllRequestFriends, acceptFriendRequest, deleteFriendRequest, searchUsersByPhone } from "../controllers/friendsRequestController";
+import { addFriendRequest, getAllRequestFriends, acceptFriendRequest, deleteFriendRequest, searchUsersByPhone, getAllRequestFriend, rejectFriendRequest } from "../controllers/friendsRequestController";
 const Router = express.Router();
 
 Router.post("/", addFriendRequest);
 Router.get("/search", searchUsersByPhone);
+Router.get("/user/:id", getAllRequestFriend);
 Router.get("/:id", getAllRequestFriends);
-Router.put("/:id", acceptFriendRequest);
+Router.put("/accept/:id", acceptFriendRequest);
+Router.put("/reject/:id", rejectFriendRequest);
 Router.delete("/:id", deleteFriendRequest);
 
 export default Router; 
